# packages/api/src/routes/profile/index.ts
@@ -1,0 +1,11 @@
+import { Router } from "express";
+import { authenticate } from "../../middleware/authenticate";
+import { userDoctorRouter } from "./user-doctor.routes";
+
+const router = Router();
+
+router.use(authenticate);
+
+router.use("/doctors", userDoctorRouter);
+
+export { router as profileRouter };
